--- a/nosotros.html
+++ b/nosotros.html
@@ -54,6 +54,7 @@
             <!-- Col -->
             <div class="col">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio accusantium molestias voluptate ad laborum ipsum pariatur id numquam tenetur corporis quasi, ipsam temporibus natus voluptates excepturi. Aut ut quod sapiente?</div>
         </div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus earum ad, nulla modi corporis suscipit vero, eos ea aperiam sed quasi ipsum reiciendis debitis veniam tempora saepe iure dolor alias!</p>
     </section>
 
      <!-- Script Separate-->
