--- a/nosotros.html
+++ b/nosotros.html
@@ -58,6 +58,9 @@
 
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat ad, exercitationem quasi nesciunt reiciendis atque. Iste minus expedita recusandae nesciunt distinctio ullam quas. Alias, sequi temporibus. Animi in iure quae.</p>
     </section>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam dolorem corporis, consequatur doloribus dicta, beatae alias tempore odio, rem debitis voluptas ratione ipsum atque? Illum magni debitis iusto quas mollitia.</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora facere illum quibusdam! Enim voluptates asperiores ducimus iste! In quaerat libero saepe, voluptatem quasi explicabo unde rem culpa repellat debitis. Tenetur.</p>
 
      <!-- Script Separate-->
 
